--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../export/get-point/GetPoint.html"
+export_path="../export/get-point/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
